# modem-manager

./: .woodpecker.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
src/: main.rs  terminator.rs  tests.rs
src/display_tools/: bars.rs  mod.rs  tui.rs
src/display_tools/tui/: app.rs  app_events.rs  app_tabs.rs  errors.rs  mod.rs  port_choice_menu.rs
src/display_tools/tui/tabs/: config_tab.rs  mod.rs  monitor_tab.rs  terminal_tab.rs
src/modem_tools/: converters.rs  mod.rs  modem.rs  supported_modems.rs  types.rs
src/serial_tools/: mod.rs  serial_reader.rs
src/state_store/: action.rs  mod.rs  state.rs  state_store.rs
src/ui_management/: bars.rs  mod.rs  ui_manager.rs
src/ui_management/components/: component.rs  main_with_tabs.rs  mod.rs  port_select_menu.rs
src/ui_management/components/tabs/: config_tab.rs  monitor_tab.rs  terminal_tab.rs
src/ui_management/pages/: main_page.rs  mod.rs  port_select_page.rs
